jaeger/01.jaeger-collector-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: jaeger-collector
  namespace: gallery
spec:
  host: jaeger-collector
  trafficPolicy:
    tls:
      mode: DISABLE
